# Comic-Scheduler

./: .gitattributes  .gitignore  LICENSE  README.md  app.json  app.py  pyproject.toml  requirements.txt  scheduler.py
static/: style.css
templates/: base.html  examples.html  index.html
