[tool.poetry]
name = "comic-scheduler"
version = "0.1.0"
description = ""
authors = ["dawidsowa <dawid_sowa@posteo.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "comic_scheduler"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
feedgen = "^0.9.0"
gunicorn = "^21.2.0"
beautifulsoup4 = "^4.12.2"
feedparser = "^6.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
